# simpleFSM

./: .gitmodules  CMakeLists.txt  README.md
cmake/: scripts.cmake
code/: CMakeLists.txt
code/include/: actionBase.h  event.h  fsm.h  state.h  transition.h
code/src/: actionBase.cpp  fsm.cpp  state.cpp
